--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Магия Git</title>
+    <title>Просто GIT</title>
 </head>
 <body style="font-family: sans-serif">
-    <h1>Магия Git</h1>
+    <h1>Git</h1>
+    <p>Новый параграф</p>
 </body>
 </html>
