--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Просто GIT</title>
 </head>
-<body style="font-family: sans-serif">
+<body>
     <h1>Git</h1>
     <p>Новый параграф</p>
 </body>
