Добавил Основные команды

--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Просто GIT</title>
+    <link href="css/style.css" rel="stylesheet">    
 </head>
 <body>
     <h1>Git</h1>
-    <p>Новый параграф</p>
-    <h2>Git</h2>
+    <p>Все про Git</p>
+    <h2>Ссылки</h2>
     <!-- coment -->
-    <p>Новый параграф</p>
+    <p>Основные команды</p>
+    <ul>
+        <li>git clone</li>
+        <li></li>
+        <li></li>
+        <li>git remote -v</li>
+        <li>git push origin master</li>
+        <li></li>
+    </ul>
 </body>
 </html>
